added new features

--- a/navyproj/src/app/home/home.component.html
+++ b/navyproj/src/app/home/home.component.html
@@ -17,12 +17,12 @@
                   <!-- Description -->
                   <div class="row mb-5"></div>
                  <div class="col-md-12">
-                  <a  routerLink="/assesments"><button type="button" class="btn btn-danger btn-rounded" size ="lg" mdbWavesEffect>Start Assesment</button></a>
+                  <a  routerLink="/assesments"><button type="button" class="btn btn-danger btn-lg btn-rounded"  mdbWavesEffect>Start Assesment</button></a>
                 </div>
 
 
               </div>
-             
+
 
           </div>
 
