changed title font

--- a/navyproj/src/app/home/home.component.html
+++ b/navyproj/src/app/home/home.component.html
@@ -11,7 +11,8 @@
               <div class="col-md-12">
 
                   <!-- Heading -->
-                  <h1 class="display-4 font-weight-bold black-text pt-5 mb-2">Flight Risk Assesment</h1>
+
+                  <h1 class="display-4 black-text pt-5 mb-2" style = "font-family: Black Ops One" >Flight Risk Assesment</h1>
 
 
                   <!-- Description -->
