--- a/navyproj/src/app/home/home.component.css
+++ b/navyproj/src/app/home/home.component.css
@@ -1,3 +1,9 @@
 h1 {
   font-family: 'Black Ops One', cursive;
-}
+
+  }
+  div{
+    background-color: #ffffff00;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+  }
