--- a/navyproj/src/app/assesments/assesments.component.css
+++ b/navyproj/src/app/assesments/assesments.component.css
@@ -1,16 +1,23 @@
 .btn-circle-pass
 {
-  width:300px;
-  height:300px;
+  width:250px;
+  height:250px;
   border-radius:150px;
   border:2px solid black;
   background: #00C851;
 }
 .btn-circle-fail
 {
-  width:300px;
-  height:300px;
+
+  width:250px;
+  height:250px;
   border-radius:150px;
   border:2px solid black;
   background: red;
 }
+.card{
+  background-color: #ffffff00;
+    backdrop-filter: blur(12px);
+    -webkit-backdrop-filter: blur(12px);
+  }
+
