--- a/navyproj/src/app/home/home.component.html
+++ b/navyproj/src/app/home/home.component.html
@@ -4,7 +4,7 @@
 <!-- <div class="row mb-5"></div> -->
   <div class="mask strong">
 
-      <div class="container-fluid d-flex align-items-center justify-content-center h-100">
+      <div class="container-md-fluid d-flex align-items-center justify-content-center h-100">
 
           <div class="row d-flex justify-content-center text-center">
 
