--- a/navyproj/src/app/app.component.css
+++ b/navyproj/src/app/app.component.css
@@ -1,13 +1,22 @@
-.container-fluid{
-  background-image: url("../assets/T-45A_Goshawk_03.jpg");
-  width: 100vw;
-  height: 100vh;
-  /* display: flex; */
-  flex-direction: row;
+body,
+html {
+  height: 100%;
+}
 
+.bg{
+  background-image: url("../assets/T-45A_Goshawk_03.jpg");
+  background-attachment: fixed;
+  height: 100vh;
+  width: 100vw;
   background-color: black;
   justify-content: center;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+@media only screen and (min-width: 400px) {
+  .bg{
+    background-image: url("../assets/T-45A_Goshawk_03.jpg")
+  }
+
 }
